--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,139 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar-brand {
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+.navbar a:hover {
+  color: rgb(148, 46, 243) !important;
+}
+
+.menu-active {
+  font-weight: bold;
+  border-bottom: 3px solid rgb(148, 46, 243);
+}
+
+#header {
+  width: 100%;
+  height: 70vh;
+  margin-top: 70px;
+}
+
+#header h1 {
+  margin: 0 0 10px 0;
+  font-family: "Mulish", sans-serif;
+  font-size: 2.5em;
+  font-weight: bold;
+  color: black;
+}
+
+#header .brand-name {
+  color: rgb(130, 62, 194);
+}
+
+#header h2 {
+  color: rgb(83, 40, 122);
+  font-size: 1.2em;
+}
+
+#header .btn-get-started {
+  color: white;
+  font-family: "Mulish", sans-serif;
+  background-color: rgb(83, 40, 122);
+  padding: 0.5em 1.2em;
+  border: 0.09em solid rgb(83, 40, 122);
+  border-radius: 2em;
+}
+
+#header .btn-get-started:hover {
+  text-decoration: none;
+  color: rgb(83, 40, 122);
+  background-color: white;
+  transition: all 0.5s ease-in-out;
+}
+
+.header-img {
+  text-align: right;
+}
+
+.image-fluid {
+  height: 65vh;
+  width: inherit;
+}
+
+#header .animated {
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+@-webkit-keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+.set-img {
+  width: 100% !important;
+  height: 38vh;
+}
+
+.set-footer {
+  background-color: white !important;
+  width: 100% !important;
+  line-height: 6vh;
+}
+
+/* Making this Website Responsive */
+@media (max-width: 991px) {
+  #header {
+    height: 80vh;
+    text-align: center;
+  }
+  #header .header-img {
+    margin-top: 10em;
+    text-align: center;
+  }
+  #header .header-img img {
+    width: 70%;
+  }
+  .set-footer {
+    margin-top: 15rem !important;
+  }
+}
+
+@media (max-width: 758px) {
+  #header {
+    margin-top: 20px;
+  }
+  #header h1 {
+    font-size: 28px;
+  }
+  #header h2 {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+  #header .header-img img {
+    width: 70%;
+  }
+  .set-footer {
+    margin-top: 10rem !important;
+  }
 }
